<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".camera">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/gradient"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="338dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/bcare" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/edge" />

    <FrameLayout

        android:id="@+id/frameLayout"
        android:layout_width="389dp"
        android:layout_height="488dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:srcCompat="@drawable/camera" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            app:srcCompat="@drawable/camerabig" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="401dp"
        android:layout_height="33dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageBtn_home3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:backgroundTint="@color/material_dynamic_tertiary80"
            app:srcCompat="@drawable/baseline_add_home_24" />

        <ImageButton
            android:id="@+id/imageBtn_tips3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:backgroundTint="@color/material_dynamic_tertiary80"
            app:srcCompat="@drawable/tips" />

        <ImageButton
            android:id="@+id/imageBtn_camera3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:backgroundTint="@color/material_dynamic_tertiary80"
            app:srcCompat="@drawable/baseline_camera_alt_24" />

        <ImageButton
            android:id="@+id/imageBtn_profile3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:backgroundTint="@color/material_dynamic_tertiary80"
            app:srcCompat="@drawable/baseline_account_circle_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:text="@string/camera_advise"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/button2"
        android:layout_width="162dp"
        android:layout_height="56dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="68dp"
        android:text="@string/camera_report"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:text="@string/camera_develpoment"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>